# Geometry

./: CMakeLists.txt  README.md
Sources/: CommandInvoker.cpp  CommandInvoker.h  Geometry.cpp  Geometry.h  Model.cpp  Model.h  Observable.cpp  Observable.h  Observer.h  Utility.cpp  Utility.h
Sources/Commands/: AggregateCommand.cpp  AggregateCommand.h  CircleCommand.cpp  CircleCommand.h  ClearCommand.cpp  ClearCommand.h  Command.cpp  Command.h  DeleteCommand.cpp  DeleteCommand.h  LineCommand.cpp  LineCommand.h  LoadCommand.cpp  LoadCommand.h  MoveCommand.cpp  MoveCommand.h  PolylineCommand.cpp  PolylineCommand.h  RectangleCommand.cpp  RectangleCommand.h  SaveCommand.cpp  SaveCommand.h
Sources/GeoElements/: Aggregate.cpp  Aggregate.h  Circle.cpp  Circle.h  GeoElement.cpp  GeoElement.h  Line.cpp  Line.h  Point.cpp  Point.h  Polyline.cpp  Polyline.h  Rectangle.cpp  Rectangle.h
Tests/: alltests.sh  results.csv  test.sh
Tests/Test01/: description  run~  std.in  std.out
Tests/Test02/: description  std.in  std.out
Tests/Test03/: description  std.in  std.out
Tests/Test04/: description  std.in  std.out
Tests/Test05/: description  std.in
Tests/Test06/: description  std.in  std.out
Tests/Test07/: description  std.in  std.out
Tests/Test08/: description  std.in  std.out
Tests/Test09/: description  std.in  std.out
Tests/Test10/: description  run  save1.outfile  std.in  std.out
Tests/Test11/: description  std.in  std.out
Tests/Test12/: std.in  std.out
Tests/Test13/: description  std.in  std.out
Tests/Test14/: a.txt  b.txt  description  std.in
(+16 files in other folders)
